test/inference/good/coreml_var.mle
let ['a] (id : 'a -> 'a) = ['a] fun (x : 'a) -> x[]