test/inference/bad/coreml_value_restriction.mle
let ['a] (id : 'a -> 'a) = ['a] fun (x : 'a) -> x[]
let (e : 'b -> 'b) = id['b -> 'b] id['b]